[project]
name = "hivewiki-collector"
version = "0.1.0"
description = "Data collection service for gathering source data for HiveWiki"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
