[project]
name = "hivewiki-collector"
version = "0.1.0"
description = "Data collection service for gathering source data for HiveWiki"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "feedparser>=6.0.12",
  "psycopg[binary]>=3.3.3",
  "redis>=7.4.0",
  "requests>=2.33.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
